# ChessBot

./: .gitignore  CMakeLists.txt
include/: Board.hpp  Game.hpp  InputHandler.hpp  MagicBitboards.hpp  Move.hpp  MoveExecution.hpp  MoveGeneration.hpp  PreCompMoveData.hpp  Renderer.hpp
scratchedIdeas/: precompmovedata.txt
src/: Board.cpp  Game.cpp  InputHandler.cpp  MagicBitboards.cpp  Move.cpp  PreCompMoveData.cpp  Renderer.cpp  main.cpp
